[package]
name = "bgpkit-parser-ui-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# json feature dependency
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
actix-web = "3"

bgpkit-parser = "0.6.0-rc.3"
bgp-models = "0.4.0"